[package]
name = "gdiscord-rs"
version = "0.1.0"
authors = ["Edwin ANDRIVET <edwinandrivet@users.noreply.github.com>"]

[dependencies]
discord = "0.8.0"

[dependencies.gtk]
version = "0.1.3"
features = ["v3_22"]

[dependencies.gdk]
version = "0.5.3"

[dependencies.glib]
version = "0.1.3"

[dependencies.pango]
version = "0.1.3"